--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap" rel="stylesheet">
 
   <!-- link the Font Awesome stylesheet - CDN -->
   <link href="https://use.fontawesome.com/releases/v5.0.1/css/all.css" rel="stylesheet" />
@@ -18,10 +21,10 @@
 
 <body>
   <nav>
-    <div>
-      <img src="./images/slack-logo.png" alt="Slack logo" />
+    <div class="listcontainer">
+      <img class = "logo" src="./images/slack-logo.png" alt="Slack logo" />
 
-      <ul>
+      <ul class="listcontainer">
         <li>
           <a href="#">Product</a>
         </li>
@@ -37,53 +40,53 @@
       </ul>
     </div>
 
-    <div>
-      <button>
+    <div class="buttoncontainer">
+      <button hidden>
         <img src="./images/icon-search.png" alt="Search icon">
       </button>
 
-      <button>
+      <button hidden>
         <img src="./images/icon-menu.png" alt="Menu icon">
       </button>
 
-      <ul hidden>
+      <ul class="buttoncontainer">
         <li>
-          <a href="#">Sign in</a>
+          <a class="signin" href="#">Sign in</a>
         </li>
         <li>
-          <a href="#">Try for free</a>
+          <a class="tryforfree" href="#">Try for free</a>
         </li>
       </ul>
     </div>
   </nav>
 
   <header>
-    <div>
+    <div class="section1">
       <h1>Great teamwork starts with a digital HQ</h1>
 
       <p>Slack is free to try for as long as you'd like.</p>
 
-      <div>
-        <button>Sign up with email</button>
+      <div class="section2">
+        <button class="sign-up-email">Sign up with email</button>
 
-        <button>
-          <img src="./images/logo-google.png" alt="Google logo" />
+        <button class="sign-up-google">
+          <img hidden src="./images/logo-google.png" alt="Google logo" />
           <span>Sign up with Google</span>
         </button>
       </div>
+     </div>
 
-    </div>
-
-    <div>
+    <div class="hero">
       <img src="./images/hero-product-ui.png" alt="Slack app screenshot" />
     </div>
   </header>
 
   <main>
-    <section>
+    <section class="section3">
+
       <p>Trusted by companies all over the world</p>
 
-      <div>
+      <div class="partner-logos">
         <img src="./images/logo-airbnb.png" alt="Airbnb logo" />
         <img src="./images/logo-nasa.png" alt="NASA logo" />
         <img src="./images/logo-uber.png" alt="Uber logo" />
